    modified with the ComponentRequires policy.
  * The build/buildpackage.py file has variable and function names changed
    to better match our terminology for packages and components.
  * Change flavor specified in the conaryrc to a flavor path -- accept the 
    flavor config parameter multiple times to create a flavor path

Changes in 0.50.12:
  * Implemented --quiet for conary update changeset commands, and cvc cook.
    Also implemented the 'quiet' configuration value. This option suppresses
    progress indicators.
  * Split loadRecipe into loadInstalled and loadSuperClass, depending on the 
    purpose of the recipe loading.  loadInstalled will examine the local
    system to look for a matching installed trove, and load that version, 
    while loadSuperClass will not.
  * Logs of builds are now stored in cooked changesets in the :debuginfo 
    component -- generally in 
    /usr/src/debug/buildlogs/<name>-<version>-log.bz2, controlled by 
    macros.buildlogpath
  * Added lib/logger.py
  * Fixed conarybugz.py to work with Conary's new site-packages location
  * Cleaned up yuck, rpm2cpio, and rpm2ccs scripts to use new "import conary"
    mechanism for finding conary.
  * Check sha1s for all files written into the repository or file system
  * conary scs --deps works again

Changes in 0.50.11:
  * Reworked file addition to local database a bit for better performance
  * Fixed sorting for --info
  * Don't make --info installs require a writeable database
  * Added an exception to group updating, restricting removal of existing 
    troves to match the group's contents to troves on the same branch
  * Groups which had the same trove added (via a referenced trove) and
    removed (from the primary trove) got confused
  * conary showcs now takes trove version
  * conary showcs will display erased troves in changesets, and erased troves
    that are referenced but not within the changeset